# My_projects

4_GB_file/: file.cpp
CPU/: CPU.cpp
Caeser/: kesar.cpp
Chess_game/: Chess.cpp
Coin_change/: Coin.cpp
Hash_table/: hash_table.cpp
Menagment/: contakt.cpp
My_interpreter/: interpret.cpp
N_queen/: 8_queen.cpp
Validation/: validation.cpp
bool_vector/: vector_bool.cpp
visualCompiler/: CMakeLists.txt  README.md  main.cpp  visualCompiler.cpp  visualCompiler.h
